# graphdb-rs

./: .gitignore  Cargo.toml
graph_engine/: Cargo.toml
graph_engine/src/: adapters.rs  graph.rs  graph_service.rs  lib.rs  medical.rs  pattern_match.rs  traversal.rs
graph_engine/src/durability/: mod.rs  recovery.rs  snapshot.rs  wal.rs
graph_visualizing/: Cargo.toml  lib.rs  visualizing.rs
graph_visualizing/src/: lib.rs  visualizing.rs
indexing_service/: Cargo.toml
indexing_service/src/: adapters.rs  errors.rs  fulltext.rs  index.rs  lib.rs
lib/: Cargo.toml
lib/src/: .commands.rs.swp  commands.rs  database.rs  lib.rs
lib/src/config/: config_constants.rs  config_helpers.rs  config_structs.rs
lib/src/connectors/: adapters.rs  connectors_registry.rs  mod.rs  models.rs  service.rs
lib/src/daemon/: daemon_registry.rs
lib/src/graph_engine/: errors.rs  execute.rs  graph.rs  graph_service.rs  mod.rs  parse_patient.rs  pattern_match.rs  traversal.rs
lib/src/graph_indexing/: adapters.rs  fulltext.rs  index.rs  mod.rs  query.rs
lib/src/history/: history_service.rs  history_types.rs  mod.rs
lib/src/indexing/: backend.rs  mod.rs  service.rs  tantivy_engine.rs
lib/src/query_exec_engine/: query_exec_engine.rs
lib/src/query_parser/: cypher_parser.rs  cypher_parser.rs.backup  cypher_parser.rs.from_repo  cypher_parser.rs.orig  mod.rs  must_replace.txt  parser_zmq.rs  qp.rs  query_types.rs
lib/src/storage_engine/: hybrid_storage.rs  inmemory_storage.rs  mod.rs  mysql_storage.rs  postgres_storage.rs  raft_storage.rs  redis_storage.rs  rocksdb_client.rs  rocksdb_storage.rs  rocksdb_storage_daemon_pool.rs  run_zmq_server_lazy_sled.rs  sled_client.rs  sled_storage.rs  sled_storage.rs.backup  sled_storage.rs.from_repo  sled_storage_daemon_pool.rs  sled_storage_daemon_pool.rs.backup  sled_wal_manager.rs  storage_engine.rs  tikv_storage.rs
medical_knowledge/: Cargo.toml
medical_knowledge/src/: from_vertex.rs  lib.rs
medical_knowledge/src/clinical_encounters/: clinical_encounters.rs  mod.rs
medical_knowledge/src/clinical_notes/: clinical_notes.rs  mod.rs
medical_knowledge/src/diagnostics/: diagnostics.rs  mod.rs
medical_knowledge/src/drug_interaction_knowledge/: drug_interaction_knowledge.rs  mod.rs
medical_knowledge/src/fhir/: fhir.rs  mod.rs
medical_knowledge/src/hl7/: hl7.rs  mod.rs
medical_knowledge/src/mpi_identity_resolution/: mod.rs  mpi_identity_resolution.rs
medical_knowledge/src/patient/: mod.rs  patient_service.rs
medical_knowledge/src/patient_journey/: mod.rs  patient_journey.rs
medical_knowledge/src/snomed_knowledge/: mod.rs  snomed_knowledge.rs
medical_knowledge_graph/: Cargo.toml
medical_knowledge_graph/src/: lib.rs
medical_knowledge_graph/src/drug_interaction_knowledge_graph/: drug_interaction_knowledge_graph.rs  mod.rs
medical_knowledge_graph/src/fhir_graph/: fhir_graph.rs  mod.rs
medical_knowledge_graph/src/hl7_graph/: hl7_graph.rs  mod.rs
medical_knowledge_graph/src/mpi_identity_resolution_graph/: mod.rs  mpi_identity_resolution_graph.rs
medical_knowledge_graph/src/patient_journey_graph/: mod.rs  patient_journey_graph.rs
models/: Cargo.toml
models/src/: dashboard.rs  edges.rs  errors.rs  evolution.rs  from_edge.rs  from_vertex.rs  graph.rs  identifiers.rs  lib.rs  mod.rs  properties.rs  timestamp.rs  to_edge.rs  vertices.rs
models/src/medical/: address.rs  allergy.rs  appointment.rs  billing_address.rs  care_plan.rs  clinical_note.rs  diagnosis.rs  disposition.rs  doctor.rs  dosage.rs  ed_event.rs  ed_procedure.rs  encounter.rs  fhir_patient.rs  golden_record.rs  imaging_order.rs  imaging_study.rs  immunization.rs  insurance.rs  lab_order.rs  lab_panel.rs  lab_result.rs  master_patient_index.rs  medical_code.rs  medical_interaction.rs  medical_interaction_primary.rs  medical_interaction_secondary.rs  medical_record.rs  medication.rs  microbiology_culture.rs  mod.rs  observation.rs  order.rs  partner.rs  pathology_report.rs  patient.rs  patient_journey.rs  pharmacy.rs  prescription.rs  problem.rs  (+7 more)
schema/: Cargo.toml
schema/src/: constraints.rs  definitions.rs  errors.rs  events.rs  extension.rs  lib.rs  lifecycle.rs  properties.rs  rules.rs  service.rs
schema/src/edges/: authored_by.rs  cosigned_by.rs  dictated_by.rs  has_addendum.rs  has_allergy.rs  has_appointment.rs  has_blocking_key.rs  has_care_plan.rs  has_clinical_note.rs  has_diagnosis.rs  has_disposition.rs  has_encounter.rs  has_imaging_order.rs  has_journey.rs  has_lab_order.rs  has_match_score.rs  has_medication.rs  has_mpi_record.rs  has_order.rs  has_potential_duplicate.rs  has_problem_reference.rs  has_procedure.rs  has_referral.rs  has_section.rs  has_subsection.rs  has_survivorship_rule.rs  is_linked_to.rs  is_merged_into.rs  is_split_from.rs  mentions_concept.rs  mod.rs  readmitted_within_30_days.rs  relationship.rs  relationship_types.rs  resolved_by.rs  supersedes.rs  transcribed_by.rs  transitioned_to.rs
schema/src/ontology/: mod.rs  ontology_registry.rs  ontology_types.rs
schema/src/vertices/: address.rs  allergy.rs  appointment.rs  billing_address.rs  care_plan.rs  claim.rs  clinical_note.rs  department.rs  diagnosis.rs  disposition.rs  doctor.rs  dosage.rs  ed_event.rs  ed_procedure.rs  encounter.rs  event.rs  facility_unit.rs  fhir_message.rs  fhir_patient.rs  hl7_message.rs  hospital.rs  imaging_order.rs  imaging_study.rs  immunization.rs  insurance.rs  lab_order.rs  lab_panel.rs  lab_result.rs  login.rs  master_patient_index.rs  medical_code.rs  medical_interaction.rs  medical_interaction_primary.rs  medical_interaction_secondary.rs  medical_record.rs  medication.rs  microbiology_culture.rs  mod.rs  nurse.rs  observation.rs  (+25 more)
server/: Cargo.toml
server/src/: main.rs
server/src/cli/: cli.rs  handlers.rs  handlers_connectors.rs  handlers_drug_interactions.rs  handlers_encounters.rs  handlers_fhir.rs  handlers_graph.rs  handlers_history.rs  handlers_hl7.rs  handlers_index.rs  handlers_medical.rs  handlers_mpi.rs  handlers_notes.rs  handlers_patient.rs  handlers_patient_journey.rs  handlers_queries.rs  handlers_snomed_codes.rs  (+6 more)
(+13 files in other folders)
