[workspace]
resolver = "2"

members = [
    "lib",
    "proto",
    "security",
    "server",
    "caching",
    "client", 
    "rest_api", 
    "security", 
    "models", 
    "plugins",
    "storage_daemon_server", 
    "storage_caching", 
    "analytics_service", 
    "caching_service", 
    "notifications_service", 
    "validation_service", 
    "observability_service", 
    "compliance_service", 
    "indexing_service",
    "logging_service", 
    "graph_engine", "query_exec_engine", "query_parser", "database", 
]

