[package]
name = "graph_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
indexing_service = { path = "../indexing_service" }
lib = { path = "../lib" }
models = { path = "../models", features = ["rocksdb-errors", "sled-errors", "bincode-errors"] }
caching = { path = "../caching" }
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] }
