[package]
name = "graph_visualizing"
version = "0.1.0"
edition = "2024"

[dependencies]
lib = { path = "../lib", version = "0.1.0"}
models = { path = "../models", features = ["rocksdb-errors", "sled-errors", "bincode-errors"] }
caching = { path = "../caching" }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] }
plotters-backend = "0.3.7"
plotters = "0.3.7"
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
