[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# Updated SurrealDB with proper features
surrealdb = { version = "2.3.7", features = ["kv-mem", "kv-rocksdb", "kv-surrealkv", "kv-tikv", "protocol-http"] }

# Keep these TiKV-related dependencies for compatibility
tikv-client = { version = "0.3.0", optional = true }
#surrealdb-tikv-client = "0.3.0-surreal.3"

# Rest of your dependencies remain the same...
quick_cache = "0.6.17"
prctl = "1.0.0"
proctitle = "0.1.1"
users = "0.11.0"
bytemuck = "1.21.0"
lazy_static = "1.5.0" # Aligned with lib
config = "0.15.8" # Consistent
libc = "0.2.175"
fs2 = "0.4.3"
keyv = { version = "0.2.1", optional = true}
futures = "0.3.31"
ordered-float = "5.0.0"
rand = "0.8.5"
actix-web = "4.11.0"
actix-rt = "2.10.0"
dotenv = "0.15.0"
dashmap = { version = "6.1.0"}
rdkafka = "0.38.0"
raft = { version = "0.7.0" }
openraft = { version = "0.9.21", features = ["serde"] }
openraft-memstore = "0.9.21"
openraft-sledstore = "0.9.21"
ring = "0.17.8"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
env_logger = "0.11.8"
serde_json = "1.0.140"
tantivy-query-grammar = "0.25.0"
tempfile = "3.23.0"
tonic = "0.12.0"
async-std = "1.13.0"
reqwest = { version = "0.12.22", features = ["json", "blocking", "rustls-tls"] }
sysinfo = { version = "0.37.0", features = ["default", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"], optional = true }
dotenvy = "0.15.7"
derivative = "2.2.0"
diesel_json = "0.2.1"
open-cypher = "0.1.1"
nom = "8.0.0"
# Use LZ4 compression instead of zstd for sled to avoid the conflict
sled = { version = "0.34.7", optional = true }
typed-sled = "0.2.3"
bytes = "1.10.0"
clap = { version = "4.5.29", features = ["derive"] }
glob = "0.3.3"
hashbrown = "0.15.2"
pest = "2.7.15"
petgraph = "0.8.2"
lalrpop = "0.22.1"
sqlparser = "0.54.0"
async-trait = "0.1.86"
bbolt-rs = "1.3.10"
rayon = "1.10.0"
tantivy = "0.25.0"
async-graphql = "7.0.15"
libloading = "0.8.6"
r2d2 = "0.8.10"
anyhow = "1.0.98"
crossterm = "0.28.1"
tokio-stream = { version = "0.1.17", optional = true }
tokio-test = "0.4.4"
mockall = "0.13.1"
graphql-parser = "0.4.1"
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde", "derive"] }
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf", "snappy", "lz4", "zlib", "zstd", "bzip2"], optional = true }
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] }
rmp-serde = "1.3.0"
once_cell = "1.20.3"
internment = "0.8.6"
byteorder = "1.5.0"
toml = "0.8.20"
postgres = "0.19.10"
redis = { version = "0.32.4", features = ["aio", "tokio-comp"], optional = true}
log = "0.4.27"
simplelog = "0.12.2"
password-hash = { version = "0.5", features = ["rand_core"] }
moka = { version = "0.12.10", features = ["sync", "future"] }
thiserror = "2.0.12"
indexing_service = { path = "../indexing_service" }
models = { path = "../models", features = ["rocksdb-errors", "sled-errors", "bincode-errors"] }
caching = { path = "../caching" }
bcrypt = "0.15.1"
regex = "1.11.1"
mysql = { version="26.0.1", optional = true}
serde_yaml2 = "0.1.3"
tokio-postgres = "0.7.13"
mysql_async = "0.36.1"
nix = { version = "0.29.0", features = ["process"]}
dirs= "6.0.0"
zmq = "0.10.0"
lz4_flex = "0.11.5"
hex = "0.4.3"
wal-rs = "1.0.2"

[features]
default = ["with-rocksdb", "with-sled", "with-tikv", "with-surrealkv",]
sled-datastore = ["sled"]
tikv-datasource = ["tikv-client", "tokio-stream"]
rocksdb-datastore = ["rocksdb"]
redis-datastore = ["redis"]
postgres-datastore = ["sqlx"]
mysql-datastore = ["mysql"]
in-memory-datastore = []
test-suite = []
bench-suite = []
with-rocksdb = ["rocksdb"]
with-tikv = ["tikv-client", "tikv-datasource"]
with-surrealkv = ["surrealdb/kv-surrealkv"]
with-sled = ["sled"]


