[package]
name = "medical_knowledge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lib = { path = "../lib", version = "0.1.0" }
models = { path = "../models", features = ["rocksdb-errors", "sled-errors", "bincode-errors"], version = "0.1.0"  }
caching = { path = "../caching", version = "0.1.0"  }
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] }
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde", "derive"] }
fhir-rs = "0.1.0"
fhir-sdk = "0.14.3"
log = "0.4.27"
rand = "0.8.5"
strsim = "0.11.1"
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
zmq="0.10.0"
warp = { version = "0.4.2", features = ["server"] } 
