[package]
name = "medical_knowledge_graph"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lib = { path = "../lib", version = "0.1.0" }
models = { path = "../models", features = ["rocksdb-errors", "sled-errors", "bincode-errors"], version = "0.1.0"  }
caching = { path = "../caching", version = "0.1.0"  }
graph_engine = { path = "../graph_engine", version = "0.1.0"  }
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] }
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde", "derive"] }
log = "0.4.27"
chrono = { version = "0.4.39", features = ["serde"] }
