[package]
name = "schema"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde", "derive"] }
log = "0.4.27"
simplelog = "0.12.2"
once_cell = "1.20.3"
password-hash = { version = "0.5", features = ["rand_core"] }
chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
sled = { version = "0.34.7"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs= "6.0.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] }
models = { path = "../models", features = ["rocksdb-errors", "sled-errors", "bincode-errors"] }

