# server/Cargo.toml
[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Dmitry Roitman <dmitryro@gmail.com>"]
keywords = ["graph", "database", "graph-database"]
categories = ["database", "database-implementations"]

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.10.0"
dotenv = "0.15.0"
daemonize = "0.5.0"
tokio = { version = "1.45.1", features = ["full"] }
env_logger = "0.11.8"
bincode = "2.0.1"
serde_json = "1.0.140"
tonic = "0.12.0"
async-std = "1.13.0"
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf", "snappy", "lz4", "zstd", "zlib", "bzip2"]}
zstd = "0.13.2" # Matches zstd-sys 2.0.15+zstd.1.5.7
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
fs2 = "0.4.3"
glob = "0.3.3"
# YAML-rust2 dependencies (replacing serde_yaml)
yaml-rust2 = "0.10.3"
serde_yaml2= "0.1.3"
dirs= "6.0.0"
dotenvy = "0.15.7"
diesel_json = "0.2.1"
open-cypher = "0.1.1"
nom = "8.0.0"
futures = "0.3.31"
sled = { version = "0.34.7" }
colored = "3.0.0"
ctrlc = "3.4.7"
rand = "0.9.2"
regex = "1.11.1"
console = "0.16.0"
bytes = "1.10.0"
hashbrown = "0.15.2"
termion = "4.0.5"
pest = "2.7.15"
lalrpop = "0.22.1"
sqlparser = "0.54.0"
async-trait = "0.1.88"
bbolt-rs = "1.3.10"
rayon = "1.10.0"
tantivy = "0.22.0"
libloading = "0.8.6"
r2d2 = "0.8.10"
socket2 = "0.6.0"
anyhow = "1.0.98"
crossterm = "0.28.1"
config = "0.15.8"
proctitle = "0.1.1"
memmap2 = "0.9.5"
shared_memory = "0.12.4"
log = "0.4.27"
tracing = "0.1.41"
sysinfo = { version = "0.37.0", features = ["default", "serde"] }
#[cfg(target_family = "unix")]
nix = "0.29.0"
libc = "0.2.169"
prctl = "1.0.0"
shm = "0.1.0"
once_cell = "1.20.3"
lazy_static = "1.5.0"
hyper = { version = "0.14.28", features = ["server", "http1"] }
base64 = "0.22.1"
toml = "0.8.23"
clap = { version = "4.5.29", features = ["derive", "env"] }
rustyline = "16.0.0"
strsim = "0.11.1" # Added for string similarity calculations
uuid = { version = "1.3.1", features = ["serde", "v4", "v1", "rng"] } # Consistent
# Consolidated path dependencies with their features and versions
storage_daemon_server = { path = "../storage_daemon_server", version = "0.1.0" }
lib = { path = "../lib", version = "0.1.0", features = ["sled-datastore"] }
rest_api = { path = "../rest_api", version = "0.1.0", features = ["server"] }
daemon = { path = "../daemon", version = "0.1.0" }
daemon_api = { path = "../daemon_api", version = "0.1.0" }
graph_engine = { path = "../graph_engine", version = "0.1.0" }
proto = { path = "../proto", version = "0.1.0", features = ["server"] }
models = { path = "../models", version = "0.1.0" }
logging_service = { path = "../logging_service", version = "0.1.0" }
notifications_service = { path = "../notifications_service", version = "0.1.0" }
analytics_service = { path = "../analytics_service", version = "0.1.0" }
caching = { path = "../caching", version = "0.1.0" }
caching_service = { path = "../caching_service", version = "0.1.0" }
observability_service = { path = "../observability_service", version = "0.1.0" }
compliance_service = { path = "../compliance_service", version = "0.1.0" }
reqwest = { version = "0.12.22", features = ["json", "blocking", "rustls-tls"] }
shell-words="1.1.0"
shlex="1.3.0"
walkdir = "2.5.0"
zmq="0.10.0"

[dev-dependencies]
serde_json = "1.0.140"

[[bin]]
name = "graphdb-cli"
path = "src/main.rs"

[lib]
name = "graphdb_server"
path = "src/lib.rs"

[features]
default = []
#with-rocksdb = ["rocksdb"]
